<resources>
    <string name="app_name">Gelişmiş Komutlar Unite 5</string>
    <string name="uyg1_isim">Uygulama 1 (Değer Döndürmeyen Metodlar)</string>
    <string name="uyg2_isim">Uygulama 2 (Değer Döndüren Metodlar)</string>
    <string name="uyg3_isim">Uygulama 3 (Parametre Alan Metodlar)</string>
    <string name="uyg4_isim">Uygulama 4 (Aşırı Yükleme)</string>
    <string name="uyg5_isim">Uygulama 5 (Elektrikli Cihaz)</string>
    <string name="uyg6_isim">Uygulama 6 (Dörtgen)</string>
    <string name="uyg7_isim">Uygulama 7 (Kapsülleme)</string>
    <string name="uyg8_isim">Uygulama 8 (Araç)</string>
    <string name="uyg9_isim">Uygulama 9 (Şekil)</string>
    <string name="uyg10_isim">Uygulama 10 (Çokbiçimlilik)</string>
    <string name="uyg11_isim">Uygulama 11 (Not)</string>
    <string name="uyg12_isim">Uygulama 12 (ArrayList)</string>
    <string name="uyg13_isim">Uygulama 13 (Savaş Oyunu)</string>
    <string name="ss_173">Sıra Sizde Sayfa 173</string>
    <string name="ss_165">Sıra Sizde Sayfa 165</string>
    <string name="ss_168">Sıra Sizde Sayfa 168</string>
    <string name="geri">Geri</string>
</resources>